Refactor: mathematically optimized code, upgraded to Java 21/Gradle 8.5, and modernized workflow